src/styles/custom.css
/* ... */
@media screen and (min-width: 80rem) {
  .expressive-code {
    max-width: 48rem;
  }
}

/* Style for the expressive code block component */
/* Code markers */
.expressive-code figcaption {
  border-bottom: 1px solid var(--fb-ec-caption-bb-color) !important;
  background: var(--fb-ec-caption-bg-color) !important;
}

.expressive-code .frame.has-title:not(.is-terminal) .title {
  position: relative;
  /* color: var(--sl-color-text) !important; */
  background: none !important;
  /* border-bottom: 1px solid #dadde1 !important; */
  /* border-bottom: none; */
  font-size: 85%;
  padding: .55rem 1rem !important;
  overflow: hidden;
  font-weight: 600;
}

.expressive-code .frame.has-title:not(.is-terminal) .language-label,
.expressive-code .frame.has-title:not(.is-terminal) .copy {
  margin-top: 0.4rem;
}

/* Table of contents:
 Style overrides: Right sidebar, items of the table of content */
.right-sidebar-panel starlight-toc ul li[class^=astro-] a {
  border-radius: 0%;
  display: inline-block;
  padding: .5rem 1.1rem;
  text-decoration: none;
  width: fit-content;
  border-left: 2px solid var(--sl-color-gray-5);
  font-weight: 400;

  /* Current selected item in the TOC */
  &:where([aria-current='true']) {
    border-left: 3px solid var(--fb-toc-color-border);
    color: var(--sl-color-white);
    background-color: var(--fb-toc-color-current-bg);
    width: fit-content;
    font-weight: 600;
    border-bottom-right-radius: .25rem !important;
    border-top-right-radius: .25rem !important;
  }

  &:hover {
    font-weight: 600;
  }
}

/* Pagination override styles */
.pagination-links {

  /* border-block-start: 2px solid var(--sl-color-gray-6); */
  a {
    /* border: 0; */
    box-shadow: initial;
  }

  :hover {
    box-shadow: initial;
    border-color: var(--sl-color-accent-high);
    box-shadow: var(--sl-shadow-sm);
  }

  a>span {
    font-size: var(--fb-h5-font-size);
    font-weight: 600;
  }

  a .link-title {
    color: var(--sl-color-text-accent);
    font-size: 1rem;
    font-weight: 600;
    transition: color 300ms ease-out;
  }
}

/* starlight steps component */
.sl-steps {
  --sl-color-hairline-light: var(--steps-hairline-color);
  --bullet-size: calc(var(--sl-line-height) * 1rem);
  --bullet-margin: .2rem !important;

  li {
    /* margin-bottom: 20px; */
    /* Space between steps */
    padding-left: 45px;
  }

  >li:before {
    --fb-steps-dimension: 30px;
    /* background-color: var(--sl-color-accent) !important; */
    background-color: var(--fb-steps-bg-color);
    /* color: #000000 !important; */
    color: var(--fb-steps-text-color) !important;
    box-shadow: none !important;
    font-size: .8rem;
    width: var(--fb-steps-dimension);
    height: var(--fb-steps-dimension);
    text-align: center;
    line-height: var(--fb-steps-dimension);
    /* border: 1px solid #b60f03; */
  }
}

/**
 * TABLES:
 * Table style overrides
 */
.sl-markdown-content table {
  width: 100%;
  border-radius: var(--border-radius);
  box-shadow: var(--sl-shadow-sm);

  table code {
    word-break: break-all;
  }

  thead th {
    background-color: var(--fb-table-header-bg-color);
    border-bottom: 2px solid var(--sl-color-gray-5);
    text-align: center !important;
  }

  thead th:not(th:last-child) {
    border-right: 2px solid var(--sl-color-gray-5);
  }

  :is(th, td):not(:where(.not-content *)) {
    --space-2xs: clamp(0.5rem, 0.5rem + 0vi, 0.5rem);
    padding-block: var(--space-2xs);
    border: 1px solid var(--sl-color-gray-6);
    /* padding: var(--space-2xs); */
  }

  thead+tbody tr:nth-child(2n):not(:where(.not-content *)) {
    background-color: var(--sl-color-gray-7);
  }

  :is(th:first-child, td:first-child):not(:where(.not-content *)) {
    padding-inline-start: var(--space-xs);
  }

  :is(th:last-child, td:last-child):not(:where(.not-content *)) {
    padding-inline-end: var(--space-xs);
  }
}

.sl-markdown-content:not(h1, h2, h3, h4, h5, h6)+ :is(h1, h2, h3, h4, h5, h6):not(:where(.not-content *)) {
  margin-top: 1.2em;
}

.main-pane {
  padding: 0 1rem;
}

.right-sidebar {
  /* Remove the  left-side border from the TOC */
  border-inline-start: 0;
  /* border-inline-start: 1px solid var(--sl-color-gray-6); */
}


/**
 * Lists
 */
.sl-markdown-content ol:not(:where(.not-content *)),
.sl-markdown-content ul:not(:where(.not-content *)) {
  list-style-type: none;
  padding-left: 0;
  /* margin-bottom: 2rem; */
}

.sl-markdown-content ol:not(:where(.not-content *)) {
  counter-reset: listitem;
}

.sl-markdown-content ol:not(:where(.not-content *))>li,
.sl-markdown-content ul:not(:where(.not-content *))>li {
  position: relative;
  padding-left: 1.85rem;
}

.sl-markdown-content li:not(:where(.not-content *))>ol,
.sl-markdown-content li:not(:where(.not-content *))>ul,
.sl-markdown-content li+li:not(:where(.not-content *)) {
  margin-top: 0.625rem;
}

.sl-markdown-content li> :last-child:not(li, ul, ol):not(a, strong, em, del, span, input, :where(.not-content *)) {
  margin-bottom: calc(var(--paragraph-spacing) + 0.5rem);
}

.sl-markdown-content ul:not(:where(.not-content *))>li:before {
  content: "";
  position: absolute;
  left: 2px;
  top: 13px;
  width: 12px;
  height: 2px;
  border-radius: 1px;
  background: var(--list-marker-color);
}

.sl-markdown-content ol:not(:where(.not-content *))>li:before {
  counter-increment: listitem;
  content: counter(listitem);
  position: absolute;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.3rem;
  text-align: center;
  height: 22px;
  width: 22px;
  min-width: 22px;
  padding-inline: 4px;
  left: 0;
  top: 3px;
  border-radius: 4px;
  color: var(--sl-color-text);
  font-family: var(--sl-font-mono);
  border: 1px solid var(--divider-color);
  box-shadow: var(--sl-shadow-sm);

}
/* ... */

